<resources>
    <string name="app_name">Robot Domótico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sin nombre de usuario</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Preferencias</string>
    <string name="facebook_application_id" translatable="false">412553426097499</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb412553426097499</string>
    <string name="twitter_consumer_key"
        translatable="false">gVcf6F6lgLySwB3VLpg85leji</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galería</string>
    <string name="menu_slideshow">Acerca de</string>
    <string name="menu_tools">Preferencias</string>
    <string name="menu_share">Mi perfil</string>
    <string name="menu_send">Contacto</string>
    <string name="action_robot">Ajustes iniciales</string>
    <string name="boton_correo">informacion@robomovil.com</string>
    <string name="boton_llamar">Llamar</string>
    <string name="info_titulo">Más información sobre nosotros</string>
    <string name="texto_incidencia">¿Ha tenido algún problema con nuestro producto?</string>
    <string name="correo_asunto">Cuestión sobre el robot</string>
    <string name="correo_texto">Hola, tengo ciertas cuestiones sobre vuestro producto.</string>
    <string name="boton_map">Nuestras oficinas</string>
    <string name="boton_share">Compartir</string>
    <string name="info_share">¿Crees que nuestro producto podría ayudar a más gente?</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="contact_form">Contáctanos</string>
    <string name="contact_form_name">Tu nombre</string>
    <string name="contact_form_email">Tu correo</string>
    <string name="contact_form_subject">Asunto</string>
    <string name="contact_form_message">Mensaje</string>
    <string name="contact_form_button">Enviar</string>
    <string name="contact_form_post_message">Mensaje enviado. Pronto nos pondremos en contacto contigo. Gracias por su paciencia.</string>
    <string name="contact_posted">Tu mensaje ha sido enviado correctamente.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic IDP Auth</string>
    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>
    <string name="general_categoria">GENERAL</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="notificaciones_summary">Activa las notificaciones del Modo Amenaza.</string>
    <string name="robot_categoria">ROBOT</string>
    <string name="tema">Cambiar tema</string>
    <string name="tema_summary">Elige entre el tema oscuro y claro</string>
    <string name="nombre_robot_summary">Nombre del robot</string>
    <string name="comenzar_recarga_preferencias_titulo">Nivel de batería para comenzar a cargar</string>
    <string name="comenzar_recarga_preferencias_summary">Asigna un nivel de batería con el cual el robot comenzará el modo Recarga Automática. Se recomienda el nivel 20.</string>

    <string name="terminar_recarga_preferencias_titulo">Nivel de batería para terminar la carga</string>
    <string name="terminar_recarga_preferencias_summary">Asigna un nivel de batería con el cual el robot terminará de cargar con el modo Recarga Automática. Se recomienda el nivel 80.</string>


    <string name="activar_recarga_automatica">Activa la recarga automática</string>
    <string name="activar_recarga_automatica_summary">Activando este modo, el robot se encargará automáticamente de la carga de la batería</string>
    <string name="nombre_del_robot_default">Sin nombre</string>
    <string name="voces_titulo">Voz y mensajes del robot</string>
    <string name="voces_summary">Activa o desactiva la voz del robot. Incluyendo su introducción, selector de modos y otros consejos.</string>
    <string name="numero_emergencia_titulo">Número de emergencia</string>
    <string name="emergencia_summary">Introduce el número al cual se realizará una llamada en caso de emergencia</string>
    <string name="configrp_titulo">Inicio automático</string>
    <string name="configrp_summary">Activa el inicio automático de la aplicación, saltándose el modo de configuración del robot. También puede ser usado para cambiar de Red WiFi o cuando hay problemas de sincronización</string>
    <string name="escanear">Pulsa en escanear para comenzar</string>
</resources>
