<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferencias_principal" >
    <PreferenceCategory
        android:key="general_category"
        android:title="@string/general_categoria">
        <SwitchPreference
            android:key="noti"
            android:defaultValue="true"
            android:title="@string/notificaciones"
            android:summary="@string/notificaciones_summary"/>
        <SwitchPreference
            android:key="tema"
            android:title="@string/tema"
            android:summary="@string/tema_summary"/>
        <SwitchPreference
            android:key="voces"
            android:defaultValue="true"
            android:title="@string/voces_titulo"
            android:summary="@string/voces_summary"/>
        <EditTextPreference
            android:defaultValue="112"
            android:key="numero_emergencia"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/emergencia_summary"
            android:title="@string/numero_emergencia_titulo" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="robot_category"
        android:title="@string/robot_categoria">
        <EditTextPreference
            android:defaultValue="@string/nombre_del_robot_default"
            android:key="nombre_robot_preferencia"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/nombre_robot_summary" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="activar_recarga_automatica"

            android:title="@string/activar_recarga_automatica"
            android:summary="@string/activar_recarga_automatica_summary"/>
        <ListPreference
            android:defaultValue="20"
            android:dependency="activar_recarga_automatica"
            android:entries="@array/porcentajeBateriaComenzarRecargar"
            android:entryValues="@array/porcentajeBateriaComenzarRecargarValores"
            android:key="valoresComenzarRecarga"
            android:title="@string/comenzar_recarga_preferencias_titulo"
            android:summary="@string/comenzar_recarga_preferencias_summary"/>

        <ListPreference
            android:defaultValue="20"
            android:entries="@array/porcentajeBateriaTerminarRecargar"
            android:dependency="activar_recarga_automatica"
            android:entryValues="@array/porcentajeBateriaTerminarRecargarValores"
            android:key="valoresTerminarRecarga"
            android:summary="@string/terminar_recarga_preferencias_summary"
            android:title="@string/terminar_recarga_preferencias_titulo" />
        <SwitchPreference
            android:key="configrp"
            android:defaultValue="false"
            android:title="@string/configrp_titulo"
            android:summary="@string/configrp_summary"/>
    </PreferenceCategory>

</PreferenceScreen>