<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Theme.AppCompat.DayNight.DarkActionBar"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"


                android:layout_marginRight="16dp"
                android:text="@string/info_titulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:layout_marginTop="16dp"

                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/incidencia_texto"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"

                android:text="@string/texto_incidencia"
                android:textAlignment="center" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0">

                <Button
                    android:id="@+id/btn_llamar"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"

                    android:drawableLeft="@android:drawable/sym_call_outgoing"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/boton_llamar" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0">

                <Button
                    android:id="@+id/btn_correo"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"

                    android:drawableLeft="@android:drawable/sym_action_email"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/boton_correo"
                    android:textAllCaps="true" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0">

                <Button
                    android:id="@+id/btn_web"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"

                    android:drawableLeft="@android:drawable/ic_menu_help"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="www.robomovil.com"
                    android:textAllCaps="true" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0">

                <Button
                    android:id="@+id/btn_map"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"

                    android:drawableLeft="@android:drawable/ic_menu_mapmode"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/boton_map"
                    android:textAllCaps="true" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:layout_marginTop="16dp"

                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/info_share"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_compartir"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"


                android:drawableLeft="@android:drawable/ic_menu_set_as"
                android:padding="8dp"
                android:text="@string/boton_share"
                />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>